:lipstick: Setup : fix (v2) missing space on backup checkbox Replaces &nbsp; added in 7890cbd7 with CSS As the other setup checkboxes seems to be OK (space might already be added, or we might have a line feed in the code between checkbox and label), we are only modifying the backup checkbox

--- a/css/setup.scss
+++ b/css/setup.scss
@@ -391,6 +391,10 @@ body {
       height: 100%;
       .ibo-setup--wizard--content{
         overflow: auto;
+
+        input#db_backup {
+          margin-right: 0.4rem;
+        }
       }
       .ibo-setup--wizard--buttons-container{
         margin-top: auto;
